--- a/style.css
+++ b/style.css
@@ -68,10 +68,12 @@ p {
 
 .high{
     background: red;
+    border-style: outset;
 }
 
 .medium{
-    background: orange;
+    background: yellow;
+    border-style: outset;
 }
 
 .low{
@@ -88,6 +90,8 @@ p {
 
 
 .loader {
+    margin-left: auto;
+    margin-right: auto;
     width: 0%;
     position: relative;
     height: 100px;
@@ -116,35 +120,35 @@ p {
     box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
 }
 .loader__bar:nth-child(1) {
-    left: 440px;
+    left: -30px;
     -webkit-transform: scale(1, 0.2);
     transform: scale(1, 0.2);
     -webkit-animation: barUp1 4s infinite;
     animation: barUp1 4s infinite;
 }
 .loader__bar:nth-child(2) {
-    left: 455px;
+    left: -15px;
     -webkit-transform: scale(1, 0.4);
     transform: scale(1, 0.4);
     -webkit-animation: barUp2 4s infinite;
     animation: barUp2 4s infinite;
 }
 .loader__bar:nth-child(3) {
-    left: 470px;
+    left: 0px;
     -webkit-transform: scale(1, 0.6);
     transform: scale(1, 0.6);
     -webkit-animation: barUp3 4s infinite;
     animation: barUp3 4s infinite;
 }
 .loader__bar:nth-child(4) {
-    left: 485px;
+    left: 15px;
     -webkit-transform: scale(1, 0.8);
     transform: scale(1, 0.8);
     -webkit-animation: barUp4 4s infinite;
     animation: barUp4 4s infinite;
 }
 .loader__bar:nth-child(5) {
-    left: 500px;
+    left: 30px;
     -webkit-transform: scale(1, 1);
     transform: scale(1, 1);
     -webkit-animation: barUp5 4s infinite;
@@ -153,7 +157,7 @@ p {
 .loader__ball {
     position: absolute;
     bottom: 10px;
-    left: 440px;
+    left: -30px;
     width: 10px;
     height: 10px;
     background: #fff;
