"Improved Css again and again and again and again and again  and again"

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ a, a:hover, a:visited, a:focus{
     color: #7c795d; font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, serif; font-size: 45px; font-weight: normal; line-height: 48px;
     margin: 20em 0 0 0;
 }
+.res2{
+    color: #7c795d; font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco, serif; font-size: 45px; font-weight: normal; line-height: 48px;
+    margin: 20em 0 0 0;
+}
+
 
 .starts{
     font-family: 'Lucida Console', 'Lucida Sans Typewriter', monaco;
